feat: add APTERO-Yundera

--- a/Projets/yundera-appstore.html
+++ b/Projets/yundera-appstore.html
@@ -160,7 +160,8 @@
   <!-- Architecture -->
   <section>
     <h2>Architecture Technique</h2>
-    <pre><code>┌─────────────────────────────────────────────────────────┐
+    <pre><code>
+┌─────────────────────────────────────────────────────────┐
 │                    Utilisateur                          │
 │                   app-demo.nsl.sh                       │
 └─────────────────────┬───────────────────────────────────┘
@@ -176,10 +177,10 @@
 │                    CasaOS / CasaIMG                     │
 │              Interface de gestion Docker                │
 ├─────────────────────────────────────────────────────────┤
-│  ┌──────────┐  ┌──────────┐  ┌──────────┐  ┌────────┐  │
-│  │ Metabase │  │ Postgres │  │  Ollama  │  │  ...   │  │
-│  │  :3000   │  │  :5432   │  │  :11434  │  │        │  │
-│  └──────────┘  └──────────┘  └──────────┘  └────────┘  │
+│  ┌──────────┐  ┌──────────┐  ┌──────────┐  ┌────────┐   │
+│  │ Metabase │  │ Postgres │  │  Ollama  │  │  ...   │   │
+│  │  :3000   │  │  :5432   │  │  :11434  │  │        │   │
+│  └──────────┘  └──────────┘  └──────────┘  └────────┘   │
 │                    Docker Containers                    │
 └─────────────────────────────────────────────────────────┘</code></pre>
   </section>
@@ -231,7 +232,7 @@
   <section>
     <h2>Ressources</h2>
     <ul>
-      <li><a href="https://github.com/worph/Yundera-AppStore" target="_blank">Yundera AppStore sur GitHub</a></li>
+      <li><a href="https://github.com/DidirGtb/AppStore" target="_blank">Yundera AppStore sur GitHub</a></li>
       <li><a href="https://yundera.com" target="_blank">Yundera - Cloud personnel</a></li>
       <li><a href="https://casaos.io" target="_blank">CasaOS - Interface Docker</a></li>
       <li><a href="https://nsl.sh" target="_blank">NSL.SH - Mesh Router</a></li>
