--- a/home.html
+++ b/home.html
@@ -123,8 +123,8 @@
     <span class="skill-tag">Networking</span>
     <span class="skill-tag">Python</span>
     <span class="skill-tag">SQL</span>
-    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  / GitHub</span>
-    <span class="skill-tag">CI/CD</span>
+    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  Git / GitHub</span>
+    <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <span class="skill-tag">YAML</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
     <span class="skill-tag">PostgreSQL</span>
