fix: icon and schema

--- a/home.html
+++ b/home.html
@@ -116,10 +116,10 @@
   </div>
 
   <div class="skills-list" style="justify-content: center;">
-    <span class="skill-tag">Docker</span>
+    <span class="skill-tag"><img src="/assets/images/Docker/docker-icon.webp" alt="Docker" style="height: 16px;"> </span>
     <span class="skill-tag">Docker Compose</span>
     <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
-    <span class="skill-tag">Azure</span>
+    <span class="skill-tag"><img src="/assets/images/AZ-900/Microsoft_Azure_logo.png" alt="Azure" style="height: 16px;"> Azure</span>
     <span class="skill-tag">Networking</span>
     <span class="skill-tag">Python</span>
     <span class="skill-tag">SQL</span>
@@ -128,6 +128,7 @@
     <span class="skill-tag">YAML</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
     <span class="skill-tag">PostgreSQL</span>
+    <span class="skill-tag"><img src="/assets/images/Dataiku/Formation-Dataiku.png" alt="Dataiku" style="height: 16px;"> Dataiku </span>
   </div>
 </section>
 
