fix: icon and schema

--- a/home.html
+++ b/home.html
@@ -121,12 +121,10 @@
     <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
     <span class="skill-tag"><img src="/assets/images/AZ-900/Microsoft_Azure_logo.png" alt="Azure" style="height: 16px;"> Azure</span>
     <span class="skill-tag"><img src="/assets/images/Python/python-logo.png" alt="Python" style="height: 16px;"> Python</span>
-    <span class="skill-tag"><img src="/assets/images/SQL/SQL.png" alt="SQL" style="height: 16px;"> </span>
+    <span class="skill-tag"><img src="/assets/images/SQL/SQL.png" alt="SQL" style="height: 16px;"> SQL </span>
     <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  Git / GitHub</span>
     <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
-    <span class="skill-tag"><img src="/assets/images/PostgreSQL/postgresql_logo.png" alt="PostgreSQL" style="height: 16px;"> PostgreSQL</span>
-    <span class="skill-tag"><img src="/assets/images/SQL/SQLdev.png" alt="SQLdev" style="height: 16px;"> </span>
     <span class="skill-tag"><img src="/assets/images/Tableau/tableau_logo.png" alt="Tableau" style="height: 16px;"> Tableau</span>
     <span class="skill-tag"><img src="/assets/images/Dataiku/Formation-Dataiku.png" alt="Dataiku" style="height: 16px;"> Dataiku </span>
   </div>
