fix: icon and schema

--- a/Projets/geotir.html
+++ b/Projets/geotir.html
@@ -165,7 +165,7 @@ docker push monregistry/projet_geotier:latest</code></pre>
 <!-- Footer -->
 <footer class="site">
   <div class="footer-links">
-    <a href="https://github.com/DidirGtb" target="_blank">GitHub</a>
+    <a href="https://github.com/DidirGtb/GEO" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/idir-guettab/" target="_blank">LinkedIn</a>
   </div>
   <p>&copy; 2025 Idir Guettab</p>
