--- a/Projets/hello_rust.html
+++ b/Projets/hello_rust.html
@@ -97,7 +97,7 @@ z = 10;
 
   <h2>🔗 Liens</h2>
   <div class="hero-buttons" style="justify-content: flex-start;">
-    <a href="https://github.com/DidirGtb" class="btn btn-primary" target="_blank">
+    <a href="https://github.com/DidirGtb/RUST_fundamental" class="btn btn-primary" target="_blank">
       Voir sur GitHub
     </a>
     <a href="../cheatsheets/rust.html" class="btn btn-outline">
