--- a/Projets/calculator.html
+++ b/Projets/calculator.html
@@ -129,7 +129,7 @@ cargo run</code></pre>
 
   <h2>🔗 Liens</h2>
   <div class="hero-buttons" style="justify-content: flex-start;">
-    <a href="https://github.com/DidirGtb" class="btn btn-primary" target="_blank">
+    <a href="https://github.com/DidirGtb/RUST_fundamental" class="btn btn-primary" target="_blank">
       Voir sur GitHub
     </a>
     <a href="../cheatsheets/rust.html" class="btn btn-outline">
