fix: icon and schema

--- a/Projets/hello_rust.html
+++ b/Projets/hello_rust.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#0a0a0b"/>
+  <link rel="icon" type="image/png" href="/assets/images/icon_IG.png"/>
 </head>
 <body>
 
@@ -40,7 +41,7 @@
     <img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;">
     Rust
   </span>
-  <h1>🦀 Hello Rust</h1>
+  <h1><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 24px;"> Hello Rust</h1>
   <p>Premier projet d'apprentissage Rust pour maitriser les fondamentaux du langage.</p>
 
   <h2>📚 Concepts appris</h2>
