--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#0a0a0b"/>
   <meta name="description" content="Portfolio de Idir Guettab - Data Analyst & Developpeur"/>
+  <link rel="icon" type="image/png" href="/assets/images/icon_IG.png"/>
 </head>
 <body>
 
@@ -116,17 +117,21 @@
   </div>
 
   <div class="skills-list" style="justify-content: center;">
-    <span class="skill-tag"><img src="/assets/images/Docker/docker-icon.webp" alt="Docker" style="height: 16px;"> Docker </span>
+    <!-- Infrastructure & Cloud -->
+    <span class="skill-tag"><img src="/assets/images/Docker/docker-icon.webp" alt="Docker" style="height: 16px;"> Docker</span>
     <span class="skill-tag"><img src="/assets/images/Docker/docker-compose-logo.png" alt="Docker Compose" style="height: 16px;"> Docker Compose</span>
     <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
     <span class="skill-tag"><img src="/assets/images/AZ-900/Microsoft-Azure.png" alt="Azure" style="height: 16px;"> Azure</span>
+    <!-- Langages -->
     <span class="skill-tag"><img src="/assets/images/Python/python-logo.png" alt="Python" style="height: 16px;"> Python</span>
-    <span class="skill-tag"><img src="/assets/images/SQL/SQL.png" alt="SQL" style="height: 16px;"> SQL </span>
-    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;">  Git / GitHub</span>
-    <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
+    <span class="skill-tag"><img src="/assets/images/SQL/SQL.png" alt="SQL" style="height: 16px;"> SQL</span>
+    <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
+    <!-- Outils -->
+    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;"> Git / GitHub</span>
+    <!-- Data & BI -->
     <span class="skill-tag"><img src="/assets/images/Tableau/tableau_logo.png" alt="Tableau" style="height: 16px;"> Tableau</span>
-    <span class="skill-tag"><img src="/assets/images/Dataiku/Formation-Dataiku.png" alt="Dataiku" style="height: 16px;"> Dataiku </span>
+    <span class="skill-tag"><img src="/assets/images/Dataiku/Formation-Dataiku.png" alt="Dataiku" style="height: 16px;"> Dataiku</span>
   </div>
 </section>
 
