--- a/cheatsheets/git.html
+++ b/cheatsheets/git.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <meta name="theme-color" content="#0a0a0b"/>
+  <link rel="icon" type="image/png" href="/assets/images/icon_IG.png"/>
 </head>
 <body>
 
