feat: add PYTHON-Monthly Invoice

--- a/menu_myproject.html
+++ b/menu_myproject.html
@@ -82,14 +82,14 @@
     </a>
   </div>
 
-  <!-- Other Projects (placeholder) -->
-  <h2>🚀 Autres Projets</h2>
+  <!-- Python Projects -->
+  <h2>🐍 Projets Python</h2>
   <div class="grid">
-    <a class="card" href="#">
-      <div class="card-icon">📈</div>
-      <span class="tag">A venir</span>
-      <h3>Prochainement...</h3>
-      <p>De nouveaux projets seront ajoutes au fur et a mesure.</p>
+    <a class="card" href="Projets/automate-invoices.html">
+      <div class="card-icon">📧</div>
+      <span class="tag">Personnel</span>
+      <h3>Automate Monthly Invoices</h3>
+      <p>Application web pour automatiser la gestion et l'envoi mensuel de factures. Flask, Airflow, Docker.</p>
     </a>
   </div>
 </div>
