feat: add Curious Lab

--- a/menu_myproject.html
+++ b/menu_myproject.html
@@ -62,6 +62,13 @@
       <h3>Geotir - Data Pipeline</h3>
       <p>Pipeline ETL pour centraliser les donnees publiques de Paris. APIs, PostgreSQL, Docker, Tableau.</p>
     </a>
+
+    <a class="card" href="Projets/curiouslab.html">
+      <div class="card-icon">📊</div>
+      <span class="tag">Projet ESILV</span>
+      <h3>CuriousLAB - Neuilly-sur-Seine</h3>
+      <p>Pipeline ETL et dashboard Tableau pour analyser le tissu economique de Neuilly-sur-Seine. 10 185 entreprises.</p>
+    </a>
   </div>
 
   <!-- Rust Projects -->
