feat: add Curious Lab

--- a/Projets/curiouslab.html
+++ b/Projets/curiouslab.html
@@ -245,7 +245,7 @@
 
   <h2>🔗 Liens</h2>
   <div class="hero-buttons" style="justify-content: flex-start;">
-    <a href="https://github.com/DidirGtb" class="btn btn-primary" target="_blank">
+    <a href="https://github.com/DidirGtb/CuriousLab" class="btn btn-primary" target="_blank">
       Voir sur GitHub
     </a>
   </div>
