feat: add GCP cheatsheet

--- a/home.html
+++ b/home.html
@@ -122,6 +122,7 @@
     <span class="skill-tag"><img src="/assets/images/Docker/docker-compose-logo.png" alt="Docker Compose" style="height: 16px;"> Docker Compose</span>
     <span class="skill-tag"><img src="/assets/images/linux/logo_linux.png" alt="Linux" style="height: 16px;"> Linux</span>
     <span class="skill-tag"><img src="/assets/images/AZ-900/Microsoft-Azure.png" alt="Azure" style="height: 16px;"> Azure</span>
+    <span class="skill-tag"><img src="/assets/images/GCP/google_cloud_icon.png" alt="GCP" style="height: 16px;"> GCP</span>
     <!-- Langages -->
     <span class="skill-tag"><img src="/assets/images/Python/python-logo.png" alt="Python" style="height: 16px;"> Python</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
