--- a/menu_cheatsheep.html
+++ b/menu_cheatsheep.html
@@ -88,6 +88,15 @@
       <p>Preparation a la certification Azure Fundamentals.</p>
     </a>
 
+    <a class="card" href="cheatsheets/gcp.html">
+      <span class="tag">
+        <img src="/assets/images/GCP/google_cloud_icon.png" alt="GCP" style="height: 16px;">
+        GCP
+      </span>
+      <h3>GCP – Google Cloud Platform</h3>
+      <p>Services cloud Google : Base, VM, Storage, BigQuery, et plus.</p>
+    </a>
+
     <a class="card" href="cheatsheets/autres.html">
       <span class="tag">Divers</span>
       <h3>Autres fiches</h3>
