--- a/home.html
+++ b/home.html
@@ -126,7 +126,7 @@
     <!-- Langages -->
     <span class="skill-tag"><img src="/assets/images/Python/python-logo.png" alt="Python" style="height: 16px;"> Python</span>
     <span class="skill-tag"><img src="/assets/images/RUST/rust-logo.png" alt="Rust" style="height: 16px;"> Rust</span>
-    <span class="skill-tag"><img src="/assets/images/SQL/SQL.png" alt="SQL" style="height: 16px;"> SQL</span>
+    <span class="skill-tag"><img src="/assets/images/SQL/sql.svg" alt="SQL" style="height: 16px;"> SQL</span>
     <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <!-- Outils -->
     <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;"> Git / GitHub</span>
