--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
     <span class="skill-tag"><img src="/assets/images/SQL/sql.svg" alt="SQL" style="height: 16px;"> SQL</span>
     <span class="skill-tag"><img src="/assets/images/SAS/logo_sas.png" alt="SAS" style="height: 16px;"> SAS</span>
     <!-- Outils -->
-    <span class="skill-tag"><img src="/assets/images/GIT/log_git-vs-github.png" alt="Git / GitHub" style="height: 16px;"> Git / GitHub</span>
+    <span class="skill-tag"><img src="/assets/images/GIT/git_icon.png" alt="Git" style="height: 16px;"> Git </span>
     <!-- Data & BI -->
     <span class="skill-tag"><img src="/assets/images/Tableau/tableau_logo.png" alt="Tableau" style="height: 16px;"> Tableau</span>
     <span class="skill-tag"><img src="/assets/images/Dataiku/Formation-Dataiku.png" alt="Dataiku" style="height: 16px;"> Dataiku</span>
