--- a/cheatsheets/linux.html
+++ b/cheatsheets/linux.html
@@ -101,7 +101,7 @@
 
   <h2>⚙️ Commandes Intermediaires</h2>
 
-  <h3 id="recherche-fichiers">Recherche de fichiers</h3>
+  <h3 id="recherche-fichiers">🔍 Recherche de fichiers</h3>
   <ul>
     <li><code>find /chemin -name "*.txt"</code> → Rechercher des fichiers par nom</li>
     <li><code>find . -type f -mtime -7</code> → Fichiers modifies dans les 7 derniers jours</li>
@@ -109,7 +109,7 @@
     <li><code>which commande</code> → Localiser l'executable d'une commande</li>
   </ul>
 
-  <h3 id="recherche-contenu">Recherche dans les fichiers</h3>
+  <h3 id="recherche-contenu"> 📝 Recherche dans les fichiers</h3>
   <ul>
     <li><code>grep "motif" fichier.txt</code> → Rechercher un motif dans un fichier</li>
     <li><code>grep -r "motif" /chemin</code> → Recherche recursive dans un dossier</li>
@@ -117,7 +117,7 @@
     <li><code>grep -n "motif" fichier.txt</code> → Afficher les numeros de ligne</li>
   </ul>
 
-  <h3 id="pipes">Pipes et redirections</h3>
+  <h3 id="pipes">🔀 Pipes et redirections</h3>
   <ul>
     <li><code>commande1 | commande2</code> → Enchainer des commandes (pipe)</li>
     <li><code>ls -la | grep ".txt"</code> → Filtrer la sortie de ls</li>
@@ -126,7 +126,7 @@
     <li><code>commande 2>&1</code> → Rediriger stderr vers stdout</li>
   </ul>
 
-  <h3 id="processus">Gestion des processus</h3>
+  <h3 id="processus">⚡Gestion des processus</h3>
   <ul>
     <li><code>ps aux</code> → Lister tous les processus</li>
     <li><code>top</code> ou <code>htop</code> → Moniteur de processus en temps reel</li>
@@ -137,7 +137,7 @@
     <li><code>fg %1</code> → Ramener le job 1 au premier plan</li>
   </ul>
 
-  <h3 id="permissions">Permissions</h3>
+  <h3 id="permissions">🔐 Permissions</h3>
   <p>Avec <code>ls -l</code>, tu vois : <code>-rwxr-xr--</code></p>
 
   <table>
@@ -252,7 +252,7 @@
     <li><code>chown user:group fichier</code> → Changer proprietaire</li>
   </ul>
 
-  <h3 id="archives">Compression et archives</h3>
+  <h3 id="archives">📦 Compression et archives</h3>
   <ul>
     <li><code>tar -czvf archive.tar.gz dossier/</code> → Creer une archive compressee</li>
     <li><code>tar -xzvf archive.tar.gz</code> → Extraire une archive</li>
@@ -260,7 +260,7 @@
     <li><code>unzip archive.zip</code> → Extraire un zip</li>
   </ul>
 
-  <h3 id="reseau">Reseau</h3>
+  <h3 id="reseau">🌐 Reseau</h3>
   <ul>
     <li><code>curl -O url</code> → Telecharger un fichier</li>
     <li><code>wget url</code> → Telecharger un fichier</li>
@@ -270,7 +270,7 @@
     <li><code>scp fichier user@host:/chemin</code> → Copier via SSH</li>
   </ul>
 
-  <h3 id="systeme">Informations systeme</h3>
+  <h3 id="systeme">💻 Informations systeme</h3>
   <ul>
     <li><code>df -h</code> → Espace disque disponible</li>
     <li><code>du -sh dossier/</code> → Taille d'un dossier</li>
